--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cookieparser": "^0.1.0",
+    "js-cookie": "^2.2.0",
     "nuxt": "^2.0.0",
     "nuxt-property-decorator": "^2.3.0"
   },
