--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vuetify": "^1.0.0-beta.2",
     "node-sass": "^4.11.0",
+    "pug": "^2.0.4",
+    "pug-plain-loader": "^1.0.0",
     "sass-loader": "^7.1.0"
   }
 }
