--- a/package.json
+++ b/package.json
@@ -19,21 +19,19 @@
   "devDependencies": {
     "@babel/traverse": "^7.1.5",
     "@babel/types": "^7.1.5",
-    "@nuxtjs/vuetify": "^1.0.0-beta.8",
+    "@nuxtjs/vuetify": "^1.11.3",
     "babel-eslint": "^10.0.1",
     "babel-plugin-transform-imports": "^1.5.1",
-    "eslint": "^5.7.0",
+    "eslint": "^6.3.0",
     "eslint-config-standard": "^12.0.0",
-    "eslint-loader": "^2.1.1",
+    "eslint-loader": "^3.0.0",
     "eslint-plugin-html": "^4.0.6",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vuetify": "^1.0.0-beta.2",
-    "node-sass": "^4.11.0",
     "pug": "^2.0.4",
-    "pug-plain-loader": "^1.0.0",
-    "sass-loader": "^7.1.0"
+    "pug-plain-loader": "^1.0.0"
   }
 }
