--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "cookieparser": "^0.1.0",
-    "js-cookie": "^2.2.0",
+    "cookie-universal-nuxt": "^2.1.5",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
